<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_etDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/etDegree"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_angle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etDegree"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="196dp"
            android:autofillHints="@string/degree"
            android:hint="@string/degree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_etDegree"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDegree_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etBase"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/base"
            android:hint="@string/base"
            app:layout_constraintStart_toEndOf="@+id/etDegree"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBase_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_calc_ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/calc_ques"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/calc_ques"
            app:srcCompat="@drawable/ic_calculate" />

        <TextView
            android:id="@+id/calc_ques"
            style="@style/Widget.TrigCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to"
            app:layout_constraintStart_toEndOf="@+id/icon_etDegree"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etDegree" />

        <RadioGroup
            android:id="@+id/calc_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/cos_option"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/calc_ques"
            app:layout_constraintTop_toBottomOf="@+id/calc_ques">

            <RadioButton
                android:id="@+id/cos_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cos" />

            <RadioButton
                android:id="@+id/tan_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tan" />

            <RadioButton
                android:id="@+id/sin_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sin" />

            <RadioButton
                android:id="@+id/fact_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fact" />

            <RadioButton
                android:id="@+id/log_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Log" />


        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:srcCompat="@drawable/ic_call_made" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Widget.TrigCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/round_up"
            app:layout_constraintStart_toStartOf="@+id/calc_options"
            app:layout_constraintTop_toBottomOf="@+id/calc_options" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            style="@style/Widget.TrigCalculator.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:background="#49CC45"
            android:text="@string/calculate"
            app:layout_constraintStart_toStartOf="@id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/result"
            style="@style/Widget.TrigCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:textColor="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:text="Answer is: 0.666" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>